[project]
name = "etl-backup-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Ramos",email = "matheussoaresramos@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "boto3 (>=1.40.58,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
