[project]
name = "etl-backup-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Ramos",email = "matheussoaresramos@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "boto3 (>=1.40.59,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
